Chat implementation test

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.6.0",
     "@chatscope/chat-ui-kit-react": "^1.10.1",
     "gatsby": "^5.9.0",
     "gatsby-plugin-env-variables": "^2.3.0",
