--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   "dependencies": {
     "@chakra-ui/react": "^2.6.0",
     "@chatscope/chat-ui-kit-react": "^1.10.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "gatsby": "^5.9.0",
     "gatsby-plugin-env-variables": "^2.3.0",
     "gatsby-plugin-support-chat": "^0.0.4",
+    "gpt4all": "^1.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
